# static-to-variable

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE.md  README.md  RELEASING.md  lefthook.yml  oxlint.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  turbo.json
.changeset/: README.md  config.json  deterministic-layout-port.md  drop-glide-simplify.md  fix-cu2qu-freeze.md  fix-default-instance-name.md  fix-interp-freeze-and-collapse.md  fix-round-glyph-freeze.md  gold-standard-hardening.md  interactive-init.md  optimal-pairing-and-adaptive-ink.md  revert-metrics-normalize.md  simple-readme.md  split-variable-font.md  tidy-metrics-caret.md  topology-splits-and-raster-quality.md  yxmmq0uq.md
.github/workflows/: ci.yml  npm-publish.yml
apps/studio/: .gitignore  AGENTS.md  components.json  next.config.ts  package.json  tsconfig.json
apps/studio/app/: globals.css  layout.tsx  page.tsx
apps/studio/app/api/export/[family]/[name]/: route.ts
apps/studio/app/api/generate/jobs/: route.ts
apps/studio/app/api/generate/jobs/[jobId]/: route.ts
apps/studio/app/api/generate/jobs/[jobId]/artifacts/[artifactId]/: route.ts
apps/studio/app/api/generate/jobs/[jobId]/log/: route.ts
apps/studio/app/api/triage/list/: route.ts
apps/studio/app/api/triage/stage/: route.ts
apps/studio/app/api/triage/unstage/: route.ts
apps/studio/app/g/[family]/[name]/: page.tsx
apps/studio/app/generate/: page.tsx
apps/studio/app/interventions/: page.tsx
apps/studio/app/triage/: page.tsx
apps/studio/components/: app-shell.tsx  apply-pending-panel.tsx  copy-command.tsx  export-button.tsx  feature-tag.tsx  filter-bar.tsx  generator-workspace.tsx  glyph-card.tsx  grid.tsx  intervention-queue.tsx  loupe-header.tsx  loupe-sidebar.tsx  nav-links.tsx  projection-cell.tsx  projection-row.tsx  score-badge.tsx  solver-card.tsx  suggestion-card.tsx  triage-actions.tsx  triage-panel.tsx  verdict-dot.tsx  weight-cell.tsx  weight-strip.tsx
apps/studio/components/ui/: button.tsx
apps/studio/lib/: data.server.ts  data.ts  generation-types.ts  generation.server.ts  interventions.server.ts  pending.server.ts  project-config.server.ts
apps/studio/scripts/: dev-with-fallback.ts  run-generation-job.ts  smoke-generation-job.ts  sync-cache.ts
apps/web/: next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/app/showcase/: page.tsx
apps/web/app/showcase/[family]/: opengraph-image.tsx  page.tsx
apps/web/components/: build-progress.tsx  build-result.tsx  build-tool.tsx  dropzone.tsx  font-preview.tsx  glyph-viewer.tsx  weight-table.tsx
apps/web/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  number-field.tsx  progress-list.tsx  select.tsx  separator.tsx  slider.tsx  stat.tsx  table.tsx
apps/web/lib/: build-client.ts  build-types.ts  font-inspect.ts  fonts.ts
cabinet/: export_designspace.py  fix_export_compatibility.py  fix_source_files.py  fix_ttf_startpoints.py  import_circular.py  requirements.txt
docs/: .gitignore  CLAUDE.md  README.md  cli-reference.mdx  codebase-cleanup-plan.md  docs.json  history-audit.md  human-intervention-pipeline-plan.md  index.mdx  nextjs-file-dump-generator-plan.md  quickstart.mdx  static-to-variable-manifest-schema.md  static-to-variable-pipeline-first-principles.md  static-to-variable-report-contracts.md
examples/glide/: README.md  stv.config.json
examples/glide/extra/: build_mono.py
examples/inter/: .gitignore  README.md  stv.config.json
examples/minimal/: README.md  stv.config.json
plans/: 00-baseline-and-p0.md  01-reconstruct-6-defective-glyphs.md  02-glyph-forge-convergence.md  03-weight-range-fix.md  04-8master-weight-curve.md  05-circular-xx-reconstruction.md
schemas/: stv-config.schema.json
schemas/fixtures/invalid/: bad-named-instance-key.json  empty-styles.json  missing-family-name.json  unknown-donor-id.json  unknown-top-level-key.json  wrong-version.json
schemas/fixtures/valid/: full-featured.json  minimal.json  repo-root-alias.json  root-key.json
scripts/: build-showcase-font.py  build-showcase-font.sh  rebuild-showcase-fonts.py  showcase-fonts.json  specimen.py
skills/static-to-variable/: SKILL.md
